Add content in History and template

--- a/ms/templates/page/home.html
+++ b/ms/templates/page/home.html
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>Este sitio sobre España</title>
     <link rel="stylesheet" type="text/css" href="{% static "css/style.css" %}">
 </head>
 <body>
@@ -12,7 +12,7 @@
     <div id="sliders">
         <div id="overflow">
             <div class="image">
-                <article><img src="{% static "img/001.jpg" %}"></article>
+                <article><img src="{% static "img/imagehomepage.jpg" %}"></article>
             </div>
         </div>
     </div>
