--- a/ms/templates/header.html
+++ b/ms/templates/header.html
@@ -1,5 +1,5 @@
 <header>
-    <h1>Sigue tu sueño</h1>
+    <h1><a href="http://127.0.0.1:8000/">Sigue tu sueño</a></h1>
     <nav>
       <a href = "http://127.0.0.1:8000/historia/">Historia</a>
       <a href = "http://127.0.0.1:8000/articulos/">Artículos</a>
