Cleaned gitignore, removed not used modules, corrected references

--- a/ms/static/css/historia.css
+++ b/ms/static/css/historia.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('../img/fonhistoria.jpg');
+    background-image: url('../img/fon_app.jpg');
     background-attachment: fixed;
     background-size: cover;
     color: rgb(253, 250, 250);
