--- a/ms/templates/header.html
+++ b/ms/templates/header.html
@@ -1,9 +1,9 @@
 <header>
-    <h1><a href="http://127.0.0.1:8000/">Sigue tu sueño</a></h1>
+    <h1><a href="/">Sigue tu sueño</a></h1>
     <nav>
-      <a href = "http://127.0.0.1:8000/historia/">Historia</a>
-      <a href = "http://127.0.0.1:8000/articulos/">Artículos</a>
-      <a href = "http://127.0.0.1:8000/fotografias/">Fotografías</a>
-      <a href = "http://127.0.0.1:8000/musica/">Música</a>
+      <a href = "/historia/">Historia</a>
+      <a href = "/articulos/">Artículos</a>
+      <a href = "/fotografias/">Fotografías</a>
+      <a href = "/musica/">Música</a>
     </nav>
 </header>
