Renamed files into English

--- a/ms/templates/page/history.html
+++ b/ms/templates/page/history.html
@@ -5,7 +5,7 @@
 <html>
 <head>
     <title>Brevemente sobre la historia</title>
-    <link rel="stylesheet" type="text/css" href="{% static "css/historia.css" %}">
+    <link rel="stylesheet" type="text/css" href="{% static "css/history.css" %}">
 </head>
 <body>
 
