--- a/ms/templates/header.html
+++ b/ms/templates/header.html
@@ -1,7 +1,7 @@
 <header>
     <h1><a href="/">Sigue tu sueño</a></h1>
     <nav>
-      <a href = "/historia/">Historia</a>
+      <a href = "/history/">Historia</a>
       <a href = "/articulos/">Artículos</a>
       <a href = "/fotografias/">Fotografías</a>
       <a href = "/musica/">Música</a>
