Created the application about articles, attached a template

--- a/ms/templates/header.html
+++ b/ms/templates/header.html
@@ -2,7 +2,7 @@
     <h1><a href="/">Sigue tu sueño</a></h1>
     <nav>
       <a href = "/history/">Historia</a>
-      <a href = "/articulos/">Artículos</a>
+      <a href = "/articles/">Artículos</a>
       <a href = "/fotografias/">Fotografías</a>
       <a href = "/musica/">Música</a>
     </nav>
