--- a/ms/templates/header.html
+++ b/ms/templates/header.html
@@ -1,9 +1,9 @@
 <header>
     <h1><a href="/">Sigue tu sueño</a></h1>
     <nav>
-      <a href = "/history/">Historia</a>
-      <a href = "/articulos/">Artículos</a>
-      <a href = "/fotografias/">Fotografías</a>
-      <a href = "/musica/">Música</a>
+      <a href = "{% url 'history:index' %}">Historia</a>
+      <a href = "#">Artículos</a>
+      <a href = "#">Fotografías</a>
+      <a href = "#">Música</a>
     </nav>
 </header>
