Create historypage with simple template
* Homepage with template

* Create historia app

* To fill up gitignore

* Add content in History and template

* Cleaned gitignore, removed not used modules, corrected references

* Renamed files into English

* Removed all empty modules

* Cleaned of the gitignore

* Corrected references

* Corrected structure of the templates of pages

* Corrected of the gitignore

* The style of the code is edited

* Solutions to the conflicts

* Solutions to the conflicts

--- a/ms/templates/header.html
+++ b/ms/templates/header.html
@@ -1,9 +1,9 @@
 <header>
-    <h1>Sigue tu sueño</h1>
+    <h1><a href="/">Sigue tu sueño</a></h1>
     <nav>
-      <a href = "http://127.0.0.1:8000/historia/">Historia</a>
-      <a href = "http://127.0.0.1:8000/articulos/">Artículos</a>
-      <a href = "http://127.0.0.1:8000/fotografias/">Fotografías</a>
-      <a href = "http://127.0.0.1:8000/musica/">Música</a>
+      <a href = "{% url 'history:index' %}">Historia</a>
+      <a href = "#">Artículos</a>
+      <a href = "#">Fotografías</a>
+      <a href = "#">Música</a>
     </nav>
 </header>
