--- a/ms/templates/page/home.html
+++ b/ms/templates/page/home.html
@@ -1,22 +1,12 @@
 {% extends 'base.html'%}
 {% load staticfiles %}
 {% block content %}
-<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-    <link rel="stylesheet" type="text/css" href="{% static "css/style.css" %}">
-</head>
-<body>
-   
     <div id="sliders">
         <div id="overflow">
             <div class="image">
-                <article><img src="{% static "img/001.jpg" %}"></article>
+                <article><img src="{% static "img/imagehomepage.jpg" %}"></article>
             </div>
         </div>
     </div>
-                
-</body>
-</html>
+ 
 {% endblock content %}
